--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/5af586b0fc.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <script src="main.js" defer></script>
+  <script src="script/main.js" defer></script>
   <title>studio C</title>
   <link rel="stylesheet" href="css/bxslider.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -19,7 +19,7 @@
   <nav id="nav">
     <div id="nav__logo"><a href="index.html">studio C</a></div>
     <ul class="nav__menu">
-      <li class="shop"><a href="#">SHOP</a>
+      <li class="shop"><a href="subindex.html" target="blank">SHOP</a>
         <ul class="clothes">
           <li><a href="#">TOP</a></li>
           <li><a href="#">BOTTOM</a></li>
